Fixed div in CSS list items to align them properly

--- a/odin-css/google-results-clone/main.css
+++ b/odin-css/google-results-clone/main.css
@@ -167,16 +167,19 @@ img[src="googlelogo.png"] {
 .nav-icon {
 	width: 16px;
 	height: 16px;
+	float: left;
+}
+
+.list-item {
+	float: left;
 }
 
 #left-nav-list {
 	float: left;
-}
-
-#nav-icon {
-	float: left;
+	border: 1px solid black;
 }
 
 #right-nav-list {
 	float: right;
+	border: 1px solid green;
 }
